Fixed Overflow for BG shapes in Connect section

--- a/style.css
+++ b/style.css
@@ -541,8 +541,11 @@ body {
 }
 
 #connect {
+    overflow: hidden;
     width: 100%;
     height: 100vh;
+    position: relative;
+
     /* background-color: #101010; */
 }
 
@@ -764,11 +767,16 @@ header a {
 
 footer {
     background-color: #101010;
+    box-sizing: border-box;
     top: 0;
     left: 0;
     z-index: 10;
     width: auto;
     transition: .6s ease;
+}
+.home-shape13,
+.home-shape14{
+    position: absolute;
 }
 
 
@@ -922,12 +930,12 @@ footer {
     }
     .home-shape13{
         width: 200vw;
-        bottom: -50rem;
+        bottom: -58rem;
         left: -40rem;
     }
     .home-shape14{
         width: 180vw;
-        bottom: -40rem;
+        bottom: -55rem;
         left: -5rem;
 
     }
@@ -1894,12 +1902,12 @@ footer {
     }
     .home-shape13{
         width: 200vw;
-        bottom: -5rem;
+        bottom: -10rem;
         left: -10rem;
     }
     .home-shape14{
         width: 180vw;
-        bottom: -6rem;
+        bottom: -12rem;
         left: -5rem;
 
     }
